style and medtasks upradges

--- a/data/medtasks.json
+++ b/data/medtasks.json
@@ -360,6 +360,78 @@
         "info":""
     },
     {
+        "id":"ratunkowa",
+        "no":31,
+        "task":"31. Hipotermia przypadkowa to:",
+        "answer1":"niezamierzone obniżenie temperatury ciała poniżej 30 stopni Celcjusza",
+        "answer2":"niezamierzone obniżenie temperatury ciała poniżej 35 stopni Celcjusza",
+        "answer3":"zamierzone obniżenie temperatury ciała poniżej 25 stopni Celcjusza",
+        "answer4":"zamierzone obniżenie temperatury ciała poniżej 30 stopni Celcjusza",
+        "answer5":"zamierzone obniżenie temperatury ciała poniżej 35 stopni Celcjusza",
+        "correct": 1,
+        "info":"Hipotermia zmniejsza zapotrzebowanie tkankowe na tlen o 6% na każdy stopień. Stąd wynika ochronny wpływ hipotermii na serce i mózg człowieka, który umożliwia pełny powrót do zdrowia nawet po długim okresie od zatrzymania krążenia, o ile tylko głęboka hipotemia rozwinie się zanim dojdzie do niedotlenienia."
+    },
+    {
+        "id":"ratunkowa",
+        "no":32,
+        "task":"32. Lekiem, który zastosujesz w czasie bradykardii jest:",
+        "answer1":"b-bloker",
+        "answer2":"adenozyna",
+        "answer3":"amiodaron",
+        "answer4":"atropina",
+        "answer5":"digoksyna",
+        "correct": 1,
+        "info":"Atropinę należy użyć w przypadku: wstrząsu, omdlenia, niedokrwienia mięśnia sercowego, niewydolności serca. Atropinę należy też podać w razie ryzyka pojawienia się asystolii, do której należą: niedawno przebyty epizod asystolii, blok AV Mobitz II, całkowity blok serca z szerokimi QRS, pauzy komorowe > 3s."
+    },
+    {
+        "id":"ratunkowa",
+        "no":33,
+        "task":"33. Preferowaną metodą dekontaminacji przewodu pokarmowego u pacjentów bez ryzyka niedrożności lub z udrożnionymi drogami oddechowymi jest podanie:",
+        "answer1":"0,9 % NaCl",
+        "answer2":"adrenaliny ",
+        "answer3":"węgla aktywowanego",
+        "answer4":"furosemidy",
+        "answer5":"mannitolu",
+        "correct": 1,
+        "info":""
+    },
+    {
+        "id":"ratunkowa",
+        "no":34,
+        "task":"34. Do leków stosowanych w czasie anaflikaksji należą:",
+        "answer1":"adrenalina",
+        "answer2":"krystaloidy",
+        "answer3":"hydrokortyzon",
+        "answer4":"chlorfenamina",
+        "answer5":"wszystkie wymienione",
+        "correct": 4,
+        "info":"Dawki dla dorosłych: adrenalina 0.5 ml im, krystaloidy 500-1000 ml, hydrokortyzon 200 mg im, chlorfenamina 10 mg im."
+    },
+    {
+        "id":"ratunkowa",
+        "no":35,
+        "task":"35. Uszereguj łańcuch przeżycia podczas tonięcia w odpowiedniej kolejności :",
+        "answer1":"rozpoznaj zagrożenie, zapewnij unoszdzenie się na powierzchni, zapobiegaj utonięciu, wydobądź z wody, zapewnij odpowiednią opiekę",
+        "answer2":"zapewnij unoszenie się na powierzchni, wydobądź z wody, zapewnij odpowiednią opiekę, rozpoznaj zagrożenie, zapobiegaj utonięciu",
+        "answer3":"rozpoznaj zagrożenie, zapobiegaj utonięciu, zapewnij unoszenie się na powierzchni, zapewnij odopwiednią opiekę, wydobądź z wody",
+        "answer4":"zapobiegaj utonięciu, rozpoznaj zagrożenie, zapewnij unoszenie się na powierzchni, wydobądź z wody, zapewnij odpowiednią opiekę ",
+        "answer5":"zapobiegaj utonięciu, zapewnij unoszenie się na wodzie, rozpoznaj zagrożenie, wydobądź z wody, zapewnij odpowiednią opiekę ",
+        "correct": 3,
+        "info":"Czas podtopienia krótszy niż 10 minut wiąże się z bardzo wysokim prawdopodobieństwem dobrego wyniku leczenia."
+    },
+    {
+        "id":"ratunkowa",
+        "no":36,
+        "task":"36. W przypadku reanimacji osoby tonącej przed rozpoczęciem RKO należy:",
+        "answer1":"podać adrenalinę dożylnie",
+        "answer2":"wykonać defibrylację",
+        "answer3":"wykonać 3 defibrylacje",
+        "answer4":"wykonać 5 oddechów ratowniczych",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 3,
+        "info":""
+    },
+    {
         "id":"ginekologia",
         "no":1,
         "task":"1. Komórka jajowa otoczona jest przez:",
@@ -706,4 +778,173 @@
         "answer5":"bliźniaków syjamskich",
         "correct": 0,
         "info":"do 4 dnia ciąży - 2 kosmówki, 2 owodnie, 4-7 dzień ciąży - 1 kosmówka, 2 owodnie, po 7 dniu - 1 kosmówka, 1 owodnia, po 14 dniu - bliźnięta niecałkowicie rozdzielone. "
-    } ]
+    },
+    {
+        "id":"ginekologia",
+        "no":30,
+        "task":"30. Wskaż zdanie fałszywe dotyczące gonadotropiny kosmówkowej:",
+        "answer1":"jest glikoproteiną",
+        "answer2":"jej obecność można stwierdzić już w pierwszym tygodniu ciąży",
+        "answer3":"wytwarzana jest przez komórki trofoblastu",
+        "answer4":"stymuluje ciałko żółte do wydzielania progesteronu",
+        "answer5":"najwyższe stężenie występuje między 60 a 80 dniem ciąży",
+        "correct": 1,
+        "info":"Gonadotropina kosmówkowa wykrywana jest od 2 tygodnia ciąży."
+    },
+    {
+        "id":"ginekologia",
+        "no":31,
+        "task":"31. Rola progesteronu w czasie ciąży polega na mniejszeniu aktywności skurczowej macicy co umożliwia donoszenie ciąży, zaś estrogeny stymulują wzrost macicy, zwiększają syntezę białek i elementów kurczliwych oraz substancji bogatych energetycznie:",
+        "answer1":"oba zdania są prawdziwe",
+        "answer2":"oba zdania są fałszywe",
+        "answer3":"pierwsze zdanie jest prawdziwe, drugie fałszywe",
+        "answer4":"pierwsze zdanie jest fałszywe, drugie prawdziwe",
+        "answer5":"oba zdania są prawdzie i pozostają w związku przyczynowo-skutkowym",
+        "correct": 0,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "no":32,
+        "task":"32. Źródłem płynu owodniowego w trzecim trymestrze ciąży nie jest:",
+        "answer1":"powierzchnia płodowa kosmówki",
+        "answer2":"mocz płodu",
+        "answer3":"płuca płodu",
+        "answer4":"jama ustna płodu",
+        "answer5":"jama nosowa płodu",
+        "correct": 0,
+        "info":"Źródła płynu owodniowego w zależnosci od trymestru: 1- częśc płodowa kosmówki, powierzchnia ciała zarodka, transport przez błony płodowe, 2 - mocz płodu, płuca płodu, 3 - mocz płodu, płuca płodu, jama ustna płodu, jama nosowa płodu."
+    },
+    {
+        "id":"ginekologia",
+        "no":33,
+        "task":"33. W II trymestrze ciąży za produkcję płynu owodniowego odpowiadają:",
+        "answer1":"powierzchnia płodowa kosmówki, powierzchnia ciała zarodka, błony płodowe",
+        "answer2":"powierzchnia płodowa kosmówki, mocz płodu, płuca płodu",
+        "answer3":"mocz płodu, płuca płodu, jama ustna płodu",
+        "answer4":"mocz płodu, płuca płodu",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 3,
+        "info":"Źródła płynu owodniowego w zależnosci od trymestru: 1- częśc płodowa kosmówki, powierzchnia ciała zarodka, transport przez błony płodowe, 2 - mocz płodu, płuca płodu, 3 - mocz płodu, płuca płodu, jama ustna płodu, jama nosowa płodu. "
+    },
+    {
+        "id":"ginekologia",
+        "no":34,
+        "task":"34. Reorpcja płynu owodniowego w III trymestrze ciąży odbywa się przez:",
+        "answer1":"połykanie przez płód",
+        "answer2":"transport śródbłonowy",
+        "answer3":"transport przezbłonowy",
+        "answer4":"a+b",
+        "answer5":"a+b+c",
+        "correct": 4,
+        "info":"transport śródbłonowy - bezpośrednia wymiana płynu owodniowego między płynem owodniowym a krwią płodu przez naczynia na płodowej części łożyska, sznur pępowinowy i skrórę płodu. Transport przezbłonowy - wymiana mniędzy płynem owodniowym a krwią matki przez doczesną i mięśniówkę macicy."
+    },
+    {
+        "id":"ginekologia",
+        "no":35,
+        "task":"35. Do czynników odporności nieswoistej należą wszystkie z wyjątkiem:",
+        "answer1":"alfa-defensyny",
+        "answer2":"lizozymu",
+        "answer3":"kalprotekryny",
+        "answer4":"psoriazyny",
+        "answer5":"przeciwciał IgG",
+        "correct": 4,
+        "info":"Czynnikami odporności nieswoistej są związki przeciwbakteryjne do których należą: alfa-densyny, lakoferryna, lizozym, kalprotektyna, inhibitor wydzielniczej proteazy leukocytarnej, psoriazyna, katelicydyna, transferyna, peroksydaza. Czynnikiem odporności swoistej są przeciwciała IgG. Stwierdzono też obecność przeciwciał IgA, IgD, IgM." 
+    },
+    {
+        "id":"ginekologia",
+        "no":36,
+        "task":"36. Ilość płynu owodniowego:",
+        "answer1":"nie zmienia się w ciągu ciąży",
+        "answer2":"rośnie do końca ciąży",
+        "answer3":"rośnie do 31-33 tygodnia ciąży, a następnie maleje",
+        "answer4":"w terminie porodu średnia objętość płynu owodniowego wynosi 750 ml",
+        "answer5":"c+d",
+        "correct": 4,
+        "info":"Po 42 tygodniu ciąży objętość płynu owodniowego wynosi 400 ml."
+    },
+    {
+        "id":"ginekologia",
+        "no":37,
+        "task":"37. Zmniejszona ilość płynu owodniowego może świadczyć o:",
+        "answer1":"przedwczesnym pęknięciu błon płodowych",
+        "answer2":"atrezji przełyku",
+        "answer3":"zastawce cewki tylnej",
+        "answer4":"trisomii chromosomu 18",
+        "answer5":"wszystkie wymienione",
+        "correct": 4,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "no":38,
+        "task":"38. Do określania ilości płynu owodniowego najczęściej stosuje się:",
+        "answer1":"SPD i AFI",
+        "answer2":"24 h po owulacji",
+        "answer3":"w momencie owulacji",
+        "answer4":"2 h po owulacji",
+        "answer5":"24 h po owulacji",
+        "correct": 0,
+        "info":"SDP - największa pojedyncza kieszonka płynu owodniowego, AFI - indeks płynu owodniowego."
+    },
+    {
+        "id":"ginekologia",
+        "no":39,
+        "task":"39. PRawidłowa ilość płynu owodniowego wedłu SDP (największej pojedycznej kieszonki płunu owodniowego) wynosi:",
+        "answer1":">> 1 i < 6 cm",
+        "answer2":">> 2 i < 6 cm",
+        "answer3":">> 2 i < 8 cm",
+        "answer4":">> 3 i < 8 cm ",
+        "answer5":">> 3 i < 9",
+        "correct": 2,
+        "info":"< 2cm - małowodzie, > 8cm wielowodzie. AFI >5cm  i <25 cm  świadczy o prawidłowej objętości płynu owodniowego."
+    },
+    {
+        "id":"ginekologia",
+        "no":40,
+        "task":"40. Amniopunkcja wykonywana jest między:",
+        "answer1":"5-10 tygdniem ciąży",
+        "answer2":"10-15 tygdniem ciąży",
+        "answer3":"15-20 tygodniem ciąży",
+        "answer4":"20-25 tygodniem ciąży",
+        "answer5":"25-30 tygodniem ciąży",
+        "correct": 2,
+        "info":"Amniopunkcja polega na pobraniu 20 ml płynu owodniowego, który następnie bada się w celu oceny kariotypu i DNA płodu. Do powikłań amniopunkcji należą: poronienie, uszkodzenie płodu igłą, plamiemie z dróg rodnych, wyciek płynu owodniowego, infekcję wewnątrzmaciczną."
+    },
+    {
+        "id":"ginekologia",
+        "no":41,
+        "task":"6. Wskaż zdanie prawdziwe dotyczące komórki jajowej i plemnika",
+        "answer1":"Niezapłodniona komórka jajkowa umiera zaraz po tym gdy nie zostanie zapłodniona, podczas gdy plemniki zachowują żywotność przez 12-14 h",
+        "answer2":"Niezapłodniona komórka jajkowa jak i plemniki umierają po 12-24h",
+        "answer3":"Niezapłodniona komórka jajkowa umiera po 12-24 h, podczas gdy plemniki zachowują żywotność przez ponad 24 h (nawet przez ponad 70 godzin)",
+        "answer4":"Niezapłodniona komórka jajkowa jak i plemniki umierają po ponad 24 h (nawet po 70 godzinach)",
+        "answer5":"Brak prawidłowej odpowiedzi",
+        "correct": 2,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "no":42,
+        "task":"42. Do oceny dojrzałości płuc stosuje się:",
+        "answer1":"QR-PCR",
+        "answer2":"lecytyna/sfingomielina",
+        "answer3":"SPD",
+        "answer4":"AFI",
+        "answer5":"alfa-defensyna",
+        "correct": 1,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "no":43,
+        "task":"43. ",
+        "answer1":"uwolnieniu enzymów w bezpośrednim sądziedztwie komórki jajowej, co umożliwia penetrację jej osłonki",
+        "answer2":"zmianach w strukturze błony śluzowej plemnika",
+        "answer3":"podziałach mejotycznych w wyniku których tworzą się plemniki",
+        "answer4":"poruszaniu się plemników w kierunku komórki jajowej",
+        "answer5":"brak prawidłowej odpowedzi",
+        "correct": 0,
+        "info":"Enzymy to: hialurodnidaza, akrozyna, kwaśna proteaza, kolagenaza, beta-glukuronidaza, neuraminidaza, fosfolipaza C."
+    }
+]
